2009-06-05  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.VersionControl/Repository.cs:
	  Unbreak SharpSvn addin build.

2009-06-05  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.VersionControl.Views/AnnotateView.cs:
	  Draw background for area after end of annotations.

2009-06-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build by adding reference to Mono.Debugging.

2009-06-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.VersionControl.csproj: Add reference to
	  DesignerSupport addin.

2009-06-01  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Makefile.am:
	* MonoDevelop.VersionControl.csproj:
	* MonoDevelop.VersionControl/Commands.cs:
	* MonoDevelop.VersionControl/Repository.cs:
	* MonoDevelop.VersionControl/UnknownRepository.cs:
	* MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
	* MonoDevelop.VersionControl/AnnotateCommand.cs:
	* MonoDevelop.VersionControl.Views/AnnotateView.cs:
	* VersionControl.addin.xml: Added "Annotate" command.

2009-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
	  Use the new FilePath class.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl\CommitCommand.cs:
	* MonoDevelop.VersionControl\FileUpdateEventHandler.cs: Track
	  api changes.

	* MonoDevelop.VersionControl\VersionControlService.cs: Looks
	  like when deserializing, MS.NET can't resolve assemblies
	  which are not in the main assembly dir, even if those
	  assemblies are already loaded. Added a resolver which
	  handles this case.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl\ChangeSet.cs:
	* MonoDevelop.VersionControl\Repository.cs:
	* MonoDevelop.VersionControl\VersionInfo.cs:
	* MonoDevelop.VersionControl\PublishCommand.cs:
	* MonoDevelop.VersionControl.Views\StatusView.cs: