@@ -29,6 +29,7 @@ FILES =  \
 	MonoDevelop.VersionControl/CommitEventHandler.cs \
 	MonoDevelop.VersionControl/CommitMessageFormat.cs \
 	MonoDevelop.VersionControl/CommitMessageStyle.cs \
+	MonoDevelop.VersionControl/CreatePatchCommand.cs \
 	MonoDevelop.VersionControl/FileUpdateEventHandler.cs \
 	MonoDevelop.VersionControl/LockCommand.cs \
 	MonoDevelop.VersionControl/PublishCommand.cs \
